--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,11 @@ on:
 
 jobs:
   linter:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        # os: [macOS-latest, ubuntu-18.04, windows-latest]
+        os: [ubuntu-18.04]
     steps:
       - name: Project checkout
         uses: actions/checkout@v2
@@ -18,7 +22,11 @@ jobs:
       - name: Check linter
         run: yarn lint
   unit-tests:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        # os: [macOS-latest, ubuntu-18.04, windows-latest]
+        os: [ubuntu-18.04, windows-latest]
     steps:
       - name: Project checkout
         uses: actions/checkout@v2
