--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ jobs:
       - name: Hardcoded tag to file
         run: (node -p "require('./package.json').version") > TAG
       - name: Set action ENV
-        run: echo "TAG=$(cat TAG)" >> $GITHUB_ENV
-      - name: Test
+        run: echo "TAG=$( cat TAG )" >> $GITHUB_ENV
+      - name: Test 01
         run: echo $TAG
+      - name: Test 02
+        run: echo $GITHUB_ENV
