--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,3 +16,5 @@ jobs:
         run: echo $TAG
       - name: Test 02
         run: echo $GITHUB_ENV
+      - name: Test 03
+        run: echo ${{ env.TAG }}
