--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,10 @@ jobs:
         with:
           node-version: 12.16.1
       - name: Hardcoded tag to file
-        run: |
-          TAG=$(node -p "require('./package.json').version")
-      - name: Set action ENV
-        run: echo "TAG=$( TAG )" >> $GITHUB_ENV
-      - name: Test 01
-        run: echo $TAG
+        run: (node -p "require('./package.json').version") > TAG
+      - name: set environment variables
+        uses: allenevans/set-env@v2.0.0
+        with:
+          TAG: cat TAG
       - name: Test 02
         run: echo $GITHUB_ENV
