--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,6 @@ jobs:
       - name: set environment variables
         uses: allenevans/set-env@v2.0.0
         with:
-          TAG: '$( cat TAG )'
+          TAG: '1234'
       - name: Test 02
         run: echo $GITHUB_ENV
