--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ jobs:
         with:
           node-version: 12.16.1
       - name: Hardcoded tag to file
-        run: echo "TAG=$(node -p "require('./package.json').version") >> $GITHUB_ENV
+        run: (node -p "require('./package.json').version") > TAG
+      - name: Set env
+        run: echo "TAG=1234" >> $GITHUB_ENV
       - name: Test 02
         run: echo $GITHUB_ENV
