--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Hardcoded tag to file
         run: (node -p "require('./package.json').version") > TAG
       - name: Set env
-        run: echo "TAG=1234" >> $GITHUB_ENV
+        run: echo "TAG=${{ cat TAG }}" >> $GITHUB_ENV
       - name: Test 02
         run: echo $GITHUB_ENV
