--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
         with:
           node-version: 12.16.1
       - name: Hardcoded tag to file
-        run: (node -p "require('./package.json').version") > TAG
+        run: echo "(node -p "require('./package.json').version")"
       - name: Set env
         run: echo "TAG=${{ cat TAG }}" >> $GITHUB_ENV
       - name: Test 02
