--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,7 @@ jobs:
           node-version: 12.16.1
       - name: Hardcoded tag to file
         run: (node -p "require('./package.json').version") > TAG
-        shell: bash
       - name: Set env
-        run: cat TAG >> $GITHUB_ENV
-        shell: bash
+        run: cat TAG >> ${env:GITHUB_ENV}
       - name: Test 02
-        run: echo $GITHUB_ENV
-        shell: bash
+        run: echo ${env:GITHUB_ENV}
