--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,8 @@ jobs:
           node-version: 12.16.1
       - name: Hardcoded tag to file
         run: (node -p "require('./package.json').version") > TAG
-      - name: Set env
-        run: echo ("TAG=" + ( cat TAG )) >> $env.GITHUB_ENV
-      - name: Test
-        run: echo $env.GITHUB_ENV
+      - run: |
+          chcp 65001 #set code page to utf-8
+          echo ("BRANCH_NAME=" + $env:GITHUB_REF.replace('refs/heads/', '')) >> $env:GITHUB_ENV
+      - run: echo "${{ env.BRANCH_NAME }}"
+      - run: echo $env:BRANCH_NAME
