--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,6 @@ jobs:
         run: (node -p "require('./package.json').version") > TAG
       - run: |
           chcp 65001 #set code page to utf-8
-          echo ("BRANCH_NAME=" + cat TAG) >> $env:GITHUB_ENV
+          echo ("BRANCH_NAME=" + (cat TAG)) >> $env:GITHUB_ENV
       - run: echo "${{ env.BRANCH_NAME }}"
       - run: echo $env:BRANCH_NAME
