--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,9 @@ on: push
 jobs:
   build:
     runs-on: windows-latest
+     strategy:
+      matrix:
+        os: [macOS-latest, ubuntu-18.04, windows-latest]
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@master
