--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,18 +12,16 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: 12.16.1
-      - name: Hardcoded tag to file
-        run: (node -p "require('./package.json').version") > TAG
       - name: Set env vars on Windows
         if: startsWith(matrix.os, 'windows')
         run: |
           chcp 65001 #set code page to utf-8
-          echo ("TAG=" + (cat TAG)) >> $env:GITHUB_ENV
+          echo ("TAG=" + (node -p "require('./package.json').version")) >> $env:GITHUB_ENV
       - name: Set env vars on Ubuntu
         if: startsWith(matrix.os, 'ubuntu')
         run: |
-          echo "TAG01=$( cat TAG )" >> $GITHUB_ENV
-          echo "TAG02=$( cat TAG )" >> $GITHUB_ENV
+          echo "TAG01=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
+          echo "TAG02=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
       - name: Test Ubuntu
         if: startsWith(matrix.os, 'ubuntu')
         run: echo $GITHUB_ENV
