--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,8 @@ jobs:
         if: startsWith(matrix.os, 'windows')
         run: |
           chcp 65001 #set code page to utf-8
-          echo ("TAG=" + (node -p "require('./package.json').version")) >> $env:GITHUB_ENV
+          echo ("TAG01=" + (node -p "require('./package.json').version")) >> $env:GITHUB_ENV
+          echo ("TAG02=" + (node -p "require('./package.json').version")) >> $env:GITHUB_ENV
       - name: Set env vars on Ubuntu
         if: startsWith(matrix.os, 'ubuntu')
         run: |
