--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
           echo ("TAG01=" + (node -p "require('./package.json').version")) >> $env:GITHUB_ENV
           echo ("TAG02=" + (node -p "require('./package.json').version")) >> $env:GITHUB_ENV
       - name: Set env vars on Ubuntu
-        if: startsWith(matrix.os, 'ubuntu' || matrix.os, 'macOS')
+        if: startsWith(matrix.os, 'ubuntu') || startsWith(matrix.os, 'macOS')
         run: |
           echo "TAG01=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
           echo "TAG02=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
