--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         run: |
           chcp 65001 #set code page to utf-8
           echo ("TAG01=" + (node -p "require('./package.json').version")) >> $env:GITHUB_ENV
-          echo ("DATA_NAME=" + $secrets.DATA_NAME) >> $env:GITHUB_ENV
+          echo ("DATA_NAME=${{ secrets.DATA_NAME }}") >> $env:GITHUB_ENV
       - name: Set env vars on Ubuntu
         if: startsWith(matrix.os, 'ubuntu') || startsWith(matrix.os, 'macOS')
         run: |
